Add more papers.

--- a/All.bib
+++ b/All.bib
@@ -182,6 +182,23 @@
   url		= {https://doi.org/10.1017/CBO9780511791246}
 }
 
+@Article{	  abraham.le-gall:94:sur,
+  author	= {Abraham, Romain and Le Gall, Jean-Fran\c{c}ois},
+  title		= {Sur la mesure de sortie du super mouvement brownien},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {99},
+  year		= {1994},
+  number	= {2},
+  pages		= {251--275},
+  issn		= {0178-8051},
+  mrclass	= {60G57 (35J60 60G17 60H30)},
+  mrnumber	= {1278885},
+  mrreviewer	= {Steven N. Evans},
+  doi		= {10.1007/BF01199025},
+  url		= {https://doi.org/10.1007/BF01199025}
+}
+
 @Book{		  abramowitz.stegun:64:handbook,
   author	= {Abramowitz, Milton and Stegun, Irene A.},
   title		= {Handbook of mathematical functions with formulas, graphs,
@@ -4385,6 +4402,44 @@
   url		= {https://doi.org/10.1007/s00220-009-0752-1}
 }
 
+@Article{	  bennett.carbery.ea:08:brascamp-lieb,
+  author	= {Bennett, Jonathan and Carbery, Anthony and Christ, Michael
+		  and Tao, Terence},
+  title		= {The {B}rascamp-{L}ieb inequalities: finiteness, structure
+		  and extremals},
+  journal	= {Geom. Funct. Anal.},
+  fjournal	= {Geometric and Functional Analysis},
+  volume	= {17},
+  year		= {2008},
+  number	= {5},
+  pages		= {1343--1415},
+  issn		= {1016-443X},
+  mrclass	= {42B99 (35K85 44A35 52A40)},
+  mrnumber	= {2377493},
+  mrreviewer	= {Loukas Grafakos},
+  doi		= {10.1007/s00039-007-0619-6},
+  url		= {https://doi.org/10.1007/s00039-007-0619-6}
+}
+
+@Article{	  bennett.carbery.ea:10:finite,
+  author	= {Bennett, Jonathan and Carbery, Anthony and Christ, Michael
+		  and Tao, Terence},
+  title		= {Finite bounds for {H}\"{o}lder-{B}rascamp-{L}ieb
+		  multilinear inequalities},
+  journal	= {Math. Res. Lett.},
+  fjournal	= {Mathematical Research Letters},
+  volume	= {17},
+  year		= {2010},
+  number	= {4},
+  pages		= {647--666},
+  issn		= {1073-2780},
+  mrclass	= {26D15},
+  mrnumber	= {2661170},
+  mrreviewer	= {Pankaj Jain},
+  doi		= {10.4310/MRL.2010.v17.n4.a6},
+  url		= {https://doi.org/10.4310/MRL.2010.v17.n4.a6}
+}
+
 @Book{		  bennett:98:randomness,
   author	= {Bennett, Deborah J.},
   title		= {Randomness},
@@ -6393,6 +6448,24 @@
   mrreviewer	= {C. Gauthier},
   doi		= {10.1016/0550-3213(90)90647-V},
   url		= {https://doi.org/10.1016/0550-3213(90)90647-V}
+}
+
+@Article{	  brezis.peletier.ea:86:very,
+  author	= {Brezis, H. and Peletier, L. A. and Terman, D.},
+  title		= {A very singular solution of the heat equation with
+		  absorption},
+  journal	= {Arch. Rational Mech. Anal.},
+  fjournal	= {Archive for Rational Mechanics and Analysis},
+  volume	= {95},
+  year		= {1986},
+  number	= {3},
+  pages		= {185--209},
+  issn		= {0003-9527},
+  mrclass	= {35K60 (35K55)},
+  mrnumber	= {853963},
+  mrreviewer	= {Yoshihito Tomita},
+  doi		= {10.1007/BF00251357},
+  url		= {https://doi.org/10.1007/BF00251357}
 }
 
 @Article{	  bringmann:22:invariant,
@@ -14168,6 +14241,24 @@
   url		= {http://links.jstor.org/sici?sici=0091-1798(197908)7:4<693:TCDOAS>2.0.CO;2-E&origin=MSN}
 }
 
+@Article{	  dawson.iscoe.ea:89:super-brownian,
+  author	= {Dawson, D. A. and Iscoe, I. and Perkins, E. A.},
+  title		= {Super-{B}rownian motion: path properties and hitting
+		  probabilities},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {83},
+  year		= {1989},
+  number	= {1-2},
+  pages		= {135--205},
+  issn		= {0178-8051},
+  mrclass	= {60G17 (60G57)},
+  mrnumber	= {1012498},
+  mrreviewer	= {Steven N. Evans},
+  doi		= {10.1007/BF00333147},
+  url		= {https://doi.org/10.1007/BF00333147}
+}
+
 @InCollection{	  dawson.kurtz:82:applications,
   author	= {Dawson, Donald A. and Kurtz, Thomas G.},
   title		= {Applications of duality to measure-valued diffusion
@@ -14213,6 +14304,23 @@
   isbn		= {978-3-642-25431-4},
   mrclass	= {60-06 (00B60 60J68)},
   mrnumber	= {3075367}
+}
+
+@Article{	  dawson.perkins:91:historical,
+  author	= {Dawson, Donald A. and Perkins, Edwin A.},
+  title		= {Historical processes},
+  journal	= {Mem. Amer. Math. Soc.},
+  fjournal	= {Memoirs of the American Mathematical Society},
+  volume	= {93},
+  year		= {1991},
+  number	= {454},
+  pages		= {iv+179},
+  issn		= {0065-9266},
+  mrclass	= {60H15 (60J60 60J80)},
+  mrnumber	= {1079034},
+  mrreviewer	= {Steven N. Evans},
+  doi		= {10.1090/memo/0454},
+  url		= {https://doi.org/10.1090/memo/0454}
 }
 
 @Article{	  dawson.vaillancourt.ea:00:stochastic,
@@ -14554,6 +14662,19 @@
   mrreviewer	= {Denis R. Bell},
   doi		= {10.1080/17442509208833752},
   url		= {https://doi.org/10.1080/17442509208833752}
+}
+
+@Book{		  dellacherie.meyer:78:probabilities,
+  author	= {Dellacherie, Claude and Meyer, Paul-Andr\'{e}},
+  title		= {Probabilities and potential},
+  series	= {North-Holland Mathematics Studies},
+  volume	= {29},
+  publisher	= {North-Holland Publishing Co., Amsterdam-New York},
+  year		= {1978},
+  pages		= {viii+189},
+  isbn		= {0-7204-0701-X},
+  mrclass	= {60-02 (28-02 31-02)},
+  mrnumber	= {521810}
 }
 
 @Book{		  dellacherie.meyer:82:probabilities,
@@ -22695,6 +22816,24 @@
   mrreviewer	= {J. A. Goldstein}
 }
 
+@Article{	  hesse.kyprianou:14:mass,
+  author	= {Hesse, Marion and Kyprianou, Andreas E.},
+  title		= {The mass of super-{B}rownian motion upon exiting balls and
+		  {S}heu's compact support condition},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {124},
+  year		= {2014},
+  number	= {6},
+  pages		= {2003--2022},
+  issn		= {0304-4149},
+  mrclass	= {60J68 (60J80)},
+  mrnumber	= {3188347},
+  mrreviewer	= {Jos\'{e} Villa-Morales},
+  doi		= {10.1016/j.spa.2014.01.011},
+  url		= {https://doi.org/10.1016/j.spa.2014.01.011}
+}
+
 @Article{	  hinojosa-calleja.sanz-sole:21:anisotropic,
   author	= {Hinojosa-Calleja, Adri\'{a}n and Sanz-Sol\'{e}, Marta},
   title		= {Anisotropic {G}aussian random fields: criteria for hitting
@@ -22920,6 +23059,37 @@
   mrreviewer	= {Huili Liu},
   doi		= {10.1214/19-AOP1386},
   url		= {https://doi.org/10.1214/19-AOP1386}
+}
+
+@Article{	  hong:18:renormalization,
+  author	= {Hong, Jieliang},
+  title		= {Renormalization of local times of super-{B}rownian
+		  motion},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {23},
+  year		= {2018},
+  pages		= {Paper No. 109, 45},
+  mrclass	= {60J55 (35R60 60J68)},
+  mrnumber	= {3878134},
+  doi		= {10.1214/18-ejp231},
+  url		= {https://doi.org/10.1214/18-ejp231}
+}
+
+@Article{	  hong:19:improved,
+  author	= {Hong, Jieliang},
+  title		= {Improved {H}\"{o}lder continuity near the boundary of
+		  one-dimensional super-{B}rownian motion},
+  journal	= {Electron. Commun. Probab.},
+  fjournal	= {Electronic Communications in Probability},
+  volume	= {24},
+  year		= {2019},
+  pages		= {Paper No. 28, 12},
+  mrclass	= {60J55 (26A16 60J68)},
+  mrnumber	= {3962478},
+  mrreviewer	= {Kenji Handa},
+  doi		= {10.1214/19-ECP237},
+  url		= {https://doi.org/10.1214/19-ECP237}
 }
 
 @Article{	  hopf:50:partial,
@@ -25789,6 +25959,23 @@
   mrclass	= {62.85},
   mrnumber	= {0139246},
   mrreviewer	= {W. Freiberger}
+}
+
+@Article{	  iscoe:88:on,
+  author	= {Iscoe, I.},
+  title		= {On the supports of measure-valued critical branching
+		  {B}rownian motion},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {1},
+  pages		= {200--221},
+  issn		= {0091-1798},
+  mrclass	= {60G57 (34B15 60J80)},
+  mrnumber	= {920265},
+  mrreviewer	= {Ralf Manthey},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198801)16:1<200:OTSOMC>2.0.CO;2-Z&origin=MSN}
 }
 
 @Book{		  ito.mckean:74:diffusion,
@@ -29617,6 +29804,23 @@
   url		= {http://links.jstor.org/sici?sici=0091-1798(199104)19:2<650:TROSRW>2.0.CO;2-P&origin=MSN}
 }
 
+@Article{	  le-gall:18:subordination,
+  author	= {Le Gall, Jean-Fran\c{c}ois},
+  title		= {Subordination of trees and the {B}rownian map},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {171},
+  year		= {2018},
+  number	= {3-4},
+  pages		= {819--864},
+  issn		= {0178-8051},
+  mrclass	= {60J80 (60D05)},
+  mrnumber	= {3827223},
+  mrreviewer	= {David A. Croydon},
+  doi		= {10.1007/s00440-017-0794-9},
+  url		= {https://doi.org/10.1007/s00440-017-0794-9}
+}
+
 @InCollection{	  le-gall:94:exponential,
   author	= {Le Gall, Jean-Fran\c{c}ois},
   title		= {Exponential moments for the renormalized self-intersection
@@ -29632,6 +29836,40 @@
   mrreviewer	= {Paul McGill},
   doi		= {10.1007/BFb0073845},
   url		= {https://doi.org/10.1007/BFb0073845}
+}
+
+@Article{	  le-gall:95:brownian,
+  author	= {Le Gall, Jean-Fran\c{c}ois},
+  title		= {The {B}rownian snake and solutions of {$\Delta u=u^2$} in
+		  a domain},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {102},
+  year		= {1995},
+  number	= {3},
+  pages		= {393--432},
+  issn		= {0178-8051},
+  mrclass	= {60J65 (60J25)},
+  mrnumber	= {1339740},
+  mrreviewer	= {E. B. Dynkin},
+  doi		= {10.1007/BF01192468},
+  url		= {https://doi.org/10.1007/BF01192468}
+}
+
+@Book{		  le-gall:99:spatial,
+  author	= {Le Gall, Jean-Fran\c{c}ois},
+  title		= {Spatial branching processes, random snakes and partial
+		  differential equations},
+  series	= {Lectures in Mathematics ETH Z\"{u}rich},
+  publisher	= {Birkh\"{a}user Verlag, Basel},
+  year		= {1999},
+  pages		= {x+163},
+  isbn		= {3-7643-6126-3},
+  mrclass	= {60J80 (35B05 35J60 35R60 60G57 60J85 60K35)},
+  mrnumber	= {1714707},
+  mrreviewer	= {John Verzani},
+  doi		= {10.1007/978-3-0348-8683-3},
+  url		= {https://doi.org/10.1007/978-3-0348-8683-3}
 }
 
 @Article{	  le:16:remark,
@@ -43774,6 +44012,18 @@
   mrnumber	= {1101484}
 }
 
+@Article{	  silverstein:67:new,
+  author	= {Silverstein, M. L.},
+  title		= {A new approach to local times},
+  journal	= {J. Math. Mech.},
+  volume	= {17},
+  year		= {1967/1968},
+  pages		= {1023--1054},
+  mrclass	= {60.62},
+  mrnumber	= {0226734},
+  mrreviewer	= {N. C. Jain}
+}
+
 @Book{		  simon:05:trace,
   author	= {Simon, Barry},
   title		= {Trace ideals and their applications},
@@ -44360,6 +44610,24 @@
   url		= {https://doi.org/10.1142/S0217732394002975}
 }
 
+@Article{	  sugitani:89:some,
+  author	= {Sugitani, Sadao},
+  title		= {Some properties for the measure-valued branching diffusion
+		  processes},
+  journal	= {J. Math. Soc. Japan},
+  fjournal	= {Journal of the Mathematical Society of Japan},
+  volume	= {41},
+  year		= {1989},
+  number	= {3},
+  pages		= {437--462},
+  issn		= {0025-5645},
+  mrclass	= {60J80 (60G57 60J55)},
+  mrnumber	= {999507},
+  mrreviewer	= {Klaus Fleischmann},
+  doi		= {10.2969/jmsj/04130437},
+  url		= {https://doi.org/10.2969/jmsj/04130437}
+}
+
 @Book{		  sutherland:04:beautiful,
   author	= {Sutherland, Bill},
   title		= {Beautiful models},
@@ -44612,6 +44880,23 @@
   mrreviewer	= {Elena A. Mazepa},
   doi		= {10.1080/03605300500299547},
   url		= {https://doi.org/10.1080/03605300500299547}
+}
+
+@Article{	  taylor:61:on,
+  author	= {Taylor, S. J.},
+  title		= {On the connexion between {H}ausdorff measures and
+		  generalized capacity},
+  journal	= {Proc. Cambridge Philos. Soc.},
+  fjournal	= {Proceedings of the Cambridge Philosophical Society},
+  volume	= {57},
+  year		= {1961},
+  pages		= {524--531},
+  issn		= {0008-1981},
+  mrclass	= {28.80},
+  mrnumber	= {133420},
+  mrreviewer	= {F. W. Gehring},
+  doi		= {10.1017/s0305004100035581},
+  url		= {https://doi.org/10.1017/s0305004100035581}
 }
 
 @Book{		  taylor:96:partial,
