Add more papers related Borx difussions

--- a/All.bib
+++ b/All.bib
@@ -1267,6 +1267,23 @@
   url		= {https://doi.org/10.1016/0304-4149(82)90051-5}
 }
 
+@Article{	  andreoletti.diel:11:limit,
+  author	= {Andreoletti, Pierre and Diel, Roland},
+  title		= {Limit law of the local time for {B}rox's diffusion},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {24},
+  year		= {2011},
+  number	= {3},
+  pages		= {634--656},
+  issn		= {0894-9840},
+  mrclass	= {60J25 (60J55 60K37)},
+  mrnumber	= {2822476},
+  mrreviewer	= {Yueyun Hu},
+  doi		= {10.1007/s10959-010-0314-7},
+  url		= {https://doi.org/10.1007/s10959-010-0314-7}
+}
+
 @InCollection{	  andrews:10:q-hypergeometric,
   author	= {Andrews, G. E.},
   title		= {{$q$}-hypergeometric and related functions},
@@ -2629,24 +2646,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {The stochastic wave equation with fractional noise: a
-		  random field approach},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {120},
-  year		= {2010},
-  number	= {12},
-  pages		= {2468--2494},
-  issn		= {0304-4149},
-  mrclass	= {60H15 (60G60 60H05)},
-  mrnumber	= {2728174},
-  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
-  doi		= {10.1016/j.spa.2010.08.006},
-  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {Stochastic heat equation with multiplicative
 		  fractional-colored noise},
   journal	= {J. Theoret. Probab.},
@@ -2661,6 +2660,24 @@
   mrreviewer	= {David Nualart},
   doi		= {10.1007/s10959-009-0237-3},
   url		= {https://doi.org/10.1007/s10959-009-0237-3}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {The stochastic wave equation with fractional noise: a
+		  random field approach},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {120},
+  year		= {2010},
+  number	= {12},
+  pages		= {2468--2494},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60G60 60H05)},
+  mrnumber	= {2728174},
+  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
+  doi		= {10.1016/j.spa.2010.08.006},
+  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 
 @Article{	  balan.zamfirescu:06:strong,
@@ -3859,6 +3876,24 @@
   mrreviewer	= {Zakhar Kabluchko},
   doi		= {10.1214/08-AIHP181},
   url		= {https://doi.org/10.1214/08-AIHP181}
+}
+
+@Article{	  bass.chen:01:stochastic,
+  author	= {Bass, Richard F. and Chen, Zhen-Qing},
+  title		= {Stochastic differential equations for {D}irichlet
+		  processes},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {121},
+  year		= {2001},
+  number	= {3},
+  pages		= {422--446},
+  issn		= {0178-8051},
+  mrclass	= {60H10 (31C25 35R60 60J35 60J55)},
+  mrnumber	= {1867429},
+  mrreviewer	= {Olivier Raimond},
+  doi		= {10.1007/s004400100151},
+  url		= {https://doi.org/10.1007/s004400100151}
 }
 
 @Article{	  bass.chen:04:self-intersection,
@@ -5758,6 +5793,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -5771,23 +5823,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -5899,7 +5934,19 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@Article{	  borodin.corwin:14:macdonald,
+@InCollection{	  borodin.corwin:14:macdonald,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
+}
+
+@Article{	  borodin.corwin:14:macdonald*1,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -5914,18 +5961,6 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
-}
-
-@InCollection{	  borodin.corwin:14:macdonald*1,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -7564,22 +7599,6 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -7594,6 +7613,22 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -14151,6 +14186,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -14165,25 +14219,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.fleischmann.ea:00:finite,
@@ -15150,6 +15185,24 @@
   mrclass	= {60A05 (00A09 01A05 60-03 62A01 62C10)},
   mrnumber	= {3702017},
   mrreviewer	= {David R. Bickel}
+}
+
+@Article{	  diel:11:almost,
+  author	= {Diel, Roland},
+  title		= {Almost sure asymptotics for the local time of a diffusion
+		  in {B}rownian environment},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {121},
+  year		= {2011},
+  number	= {10},
+  pages		= {2303--2330},
+  issn		= {0304-4149},
+  mrclass	= {60J25 (60J55 60J60 60K37)},
+  mrnumber	= {2822778},
+  mrreviewer	= {Firas Rassoul-Agha},
+  doi		= {10.1016/j.spa.2011.06.002},
+  url		= {https://doi.org/10.1016/j.spa.2011.06.002}
 }
 
 @InCollection{	  dieng.tracy:11:application,
@@ -17100,20 +17153,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -17124,6 +17163,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -17989,6 +18042,23 @@
   year		= {[2019] \copyright 2019},
   mrclass	= {60L30 (60-02 60H17 60L40)},
   mrnumber	= {3971357}
+}
+
+@Article{	  flandoli.russo.ea:03:some,
+  author	= {Flandoli, Franco and Russo, Francesco and Wolf, Jochen},
+  title		= {Some {SDE}s with distributional drift. {I}. {G}eneral
+		  calculus},
+  journal	= {Osaka J. Math.},
+  fjournal	= {Osaka Journal of Mathematics},
+  volume	= {40},
+  year		= {2003},
+  number	= {2},
+  pages		= {493--542},
+  issn		= {0030-6126},
+  mrclass	= {60H20 (47D07 47N30 60H10)},
+  mrnumber	= {1988703},
+  mrreviewer	= {Anna Milian},
+  url		= {http://projecteuclid.org/euclid.ojm/1153493096}
 }
 
 @Article{	  flandoli.russo.ea:04:some,
@@ -19177,6 +19247,23 @@
   url		= {https://doi.org/10.3150/20-bej1291}
 }
 
+@Article{	  garsia.rodemich.ea:70:real,
+  author	= {Garsia, A. M. and Rodemich, E. and Rumsey, Jr., H.},
+  title		= {A real variable lemma and the continuity of paths of some
+		  {G}aussian processes},
+  journal	= {Indiana Univ. Math. J.},
+  fjournal	= {Indiana University Mathematics Journal},
+  volume	= {20},
+  year		= {1970/71},
+  pages		= {565--578},
+  issn		= {0022-2518},
+  mrclass	= {60.40},
+  mrnumber	= {267632},
+  mrreviewer	= {D. W. Stroock},
+  doi		= {10.1512/iumj.1970.20.20046},
+  url		= {https://doi.org/10.1512/iumj.1970.20.20046}
+}
+
 @Article{	  garsia.rodemich:74:monotonicity,
   author	= {Garsia, A. M. and Rodemich, E.},
   title		= {Monotonicity of certain functionals under rearrangement},
@@ -20111,6 +20198,20 @@
   mrreviewer	= {Dimitri Petritis},
   doi		= {10.1142/S0219493708002366},
   url		= {https://doi.org/10.1142/S0219493708002366}
+}
+
+@Book{		  gradshteyn.ryzhik:00:table,
+  author	= {Gradshteyn, I. S. and Ryzhik, I. M.},
+  title		= {Table of integrals, series, and products},
+  edition	= {Sixth},
+  note		= {Translated from the Russian, Translation edited and with a
+		  preface by Alan Jeffrey and Daniel Zwillinger},
+  publisher	= {Academic Press, Inc., San Diego, CA},
+  year		= {2000},
+  pages		= {xlvii+1163},
+  isbn		= {0-12-294757-6},
+  mrclass	= {00A22 (33-00 65-00 65A05)},
+  mrnumber	= {1773820}
 }
 
 @Book{		  grafakos:14:classical,
@@ -22848,6 +22949,24 @@
   mrreviewer	= {Jos\'{e} Villa-Morales},
   doi		= {10.1016/j.spa.2014.01.011},
   url		= {https://doi.org/10.1016/j.spa.2014.01.011}
+}
+
+@Book{		  hida.kuo.ea:93:white,
+  author	= {Hida, Takeyuki and Kuo, Hui-Hsiung and Potthoff,
+		  J\"{u}rgen and Streit, Ludwig},
+  title		= {White noise},
+  series	= {Mathematics and its Applications},
+  volume	= {253},
+  note		= {An infinite-dimensional calculus},
+  publisher	= {Kluwer Academic Publishers Group, Dordrecht},
+  year		= {1993},
+  pages		= {xiv+516},
+  isbn		= {0-7923-2233-9},
+  mrclass	= {60G20 (46F25 46Gxx 47N30 60G15 60H05 60H07 81T08)},
+  mrnumber	= {1244577},
+  mrreviewer	= {Mylan Redfern},
+  doi		= {10.1007/978-94-017-3680-0},
+  url		= {https://doi.org/10.1007/978-94-017-3680-0}
 }
 
 @Article{	  hinojosa-calleja.sanz-sole:21:anisotropic,
@@ -25683,25 +25802,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by spatially correlated noise},
-  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
-		  et Statistiques},
-  volume	= {53},
-  year		= {2017},
-  number	= {3},
-  pages		= {1305--1340},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber	= {3689969},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1214/16-AIHP756},
-  url		= {https://doi.org/10.1214/16-AIHP756}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by space and time correlated noise},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal	= {Stochastic Partial Differential Equations. Analysis and
@@ -25716,6 +25816,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1007/s40072-017-0099-0},
   url		= {https://doi.org/10.1007/s40072-017-0099-0}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by spatially correlated noise},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {53},
+  year		= {2017},
+  number	= {3},
+  pages		= {1305--1340},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber	= {3689969},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1214/16-AIHP756},
+  url		= {https://doi.org/10.1214/16-AIHP756}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -26118,6 +26237,20 @@
   mrreviewer	= {Dominique L\'{e}pingle},
   doi		= {10.1007/978-3-662-02514-7},
   url		= {https://doi.org/10.1007/978-3-662-02514-7}
+}
+
+@Book{		  jacod:79:calcul,
+  author	= {Jacod, Jean},
+  title		= {Calcul stochastique et probl\`emes de martingales},
+  series	= {Lecture Notes in Mathematics},
+  volume	= {714},
+  publisher	= {Springer, Berlin},
+  year		= {1979},
+  pages		= {x+539},
+  isbn		= {3-540-09253-6},
+  mrclass	= {60G44 (60G42 60H05)},
+  mrnumber	= {542115},
+  mrreviewer	= {Yu. M. Kabanov}
 }
 
 @Article{	  jain.mathur:92:world-sheet,
@@ -28809,6 +28942,24 @@
   mrreviewer	= {Joel Smoller},
   doi		= {10.2969/jmsj/02930407},
   url		= {https://doi.org/10.2969/jmsj/02930407}
+}
+
+@Article{	  kobayashi:11:stochastic,
+  author	= {Kobayashi, Kei},
+  title		= {Stochastic calculus for a time-changed semimartingale and
+		  the associated stochastic differential equations},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {24},
+  year		= {2011},
+  number	= {3},
+  pages		= {789--820},
+  issn		= {0894-9840},
+  mrclass	= {60H05 (60H10)},
+  mrnumber	= {2822482},
+  mrreviewer	= {Jan I. Seidler},
+  doi		= {10.1007/s10959-010-0320-9},
+  url		= {https://doi.org/10.1007/s10959-010-0320-9}
 }
 
 @Article{	  kochubeui:89:cauchy,
@@ -31740,6 +31891,22 @@
   mrnumber	= {4239802},
   doi		= {10.1007/s00245-019-09570-5},
   url		= {https://doi.org/10.1007/s00245-019-09570-5}
+}
+
+@Article{	  matsumoto.yor:05:exponential,
+  author	= {Matsumoto, Hiroyuki and Yor, Marc},
+  title		= {Exponential functionals of {B}rownian motion. {II}. {S}ome
+		  related diffusion processes},
+  journal	= {Probab. Surv.},
+  fjournal	= {Probability Surveys},
+  volume	= {2},
+  year		= {2005},
+  pages		= {348--384},
+  mrclass	= {60J65 (60H30 60J60 91B28)},
+  mrnumber	= {2203676},
+  mrreviewer	= {Catherine Donati-Martin},
+  doi		= {10.1214/154957805100000168},
+  url		= {https://doi.org/10.1214/154957805100000168}
 }
 
 @Book{		  mattila:95:geometry,
@@ -35177,21 +35344,7 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Book{		  nane:06:iterated*1,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
-}
-
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -35208,6 +35361,20 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Book{		  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -37367,6 +37534,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -37382,21 +37564,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -39971,6 +40138,24 @@
   mrclass	= {60G57 (60H15 60J80 60K35)},
   mrnumber	= {1915445},
   mrreviewer	= {Anton Wakolbinger}
+}
+
+@Article{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time is a semimartingale},
+  journal	= {Z. Wahrsch. Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {60},
+  year		= {1982},
+  number	= {1},
+  pages		= {79--117},
+  issn		= {0044-3719},
+  mrclass	= {60J65 (60G44)},
+  mrnumber	= {661760},
+  mrreviewer	= {E. \c{C}inlar},
+  doi		= {10.1007/BF01957098},
+  url		= {https://doi.org/10.1007/BF01957098}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -43191,6 +43376,23 @@
   mrnumber	= {1382012}
 }
 
+@InCollection{	  schumacher:85:diffusions,
+  author	= {Schumacher, Scott},
+  title		= {Diffusions with random coefficients},
+  booktitle	= {Particle systems, random media and large deviations
+		  ({B}runswick, {M}aine, 1984)},
+  series	= {Contemp. Math.},
+  volume	= {41},
+  pages		= {351--356},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1985},
+  mrclass	= {60F05 (60J60 82A42)},
+  mrnumber	= {814724},
+  mrreviewer	= {G. Papanicolaou},
+  doi		= {10.1090/conm/041/814724},
+  url		= {https://doi.org/10.1090/conm/041/814724}
+}
+
 @Article{	  schutz:97:exact,
   author	= {Sch\"{u}tz, Gunter M.},
   title		= {Exact solution of the master equation for the asymmetric
@@ -43958,6 +44160,23 @@
   url		= {https://doi.org/10.4310/MRL.2007.v14.n2.a4}
 }
 
+@Article{	  shi:98:local,
+  author	= {Shi, Zhan},
+  title		= {A local time curiosity in random environment},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {76},
+  year		= {1998},
+  number	= {2},
+  pages		= {231--250},
+  issn		= {0304-4149},
+  mrclass	= {60K35 (60J15 60J55 60J60)},
+  mrnumber	= {1642673},
+  mrreviewer	= {Kiyoshi Kawazu},
+  doi		= {10.1016/S0304-4149(98)00036-2},
+  url		= {https://doi.org/10.1016/S0304-4149(98)00036-2}
+}
+
 @Article{	  shiga.shimizu:80:infinite-dimensional,
   author	= {Shiga, Tokuzo and Shimizu, Akinobu},
   title		= {Infinite-dimensional stochastic differential equations and
@@ -44144,6 +44363,23 @@
   mrclass	= {81C35 (58D30 60J65 81-02)},
   mrnumber	= {544188},
   mrreviewer	= {V. A. Malyshev}
+}
+
+@Article{	  sinaui:82:limit,
+  author	= {Sinau{i}, Ya. G.},
+  title		= {The limit behavior of a one-dimensional random walk in a
+		  random environment},
+  journal	= {Teor. Veroyatnost. i Primenen.},
+  fjournal	= {Akademiya Nauk SSSR. Teoriya Veroyatnosteu{i} i ee
+		  Primeneniya},
+  volume	= {27},
+  year		= {1982},
+  number	= {2},
+  pages		= {247--258},
+  issn		= {0040-361X},
+  mrclass	= {60J15 (58F11 60K35 82A42 82A70)},
+  mrnumber	= {657919},
+  mrreviewer	= {F. L. Spitzer}
 }
 
 @Article{	  skorohod:56:limit,
@@ -46081,6 +46317,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -46095,23 +46348,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
